# archestra

./: README.md
.github/: kind.yaml  values-ci-vault-k8s.yaml  values-ci.yaml  values-staging.yaml
.github/release-please/: .release-please-manifest.json  release-please-config.json
.github/workflows/: auto-assign-reviewers.yml  build-base-mcp-server-docker-image.yml  build-dockerhub-image.yml  clear-github-actions-cache.yml  on-commits-to-main.yml  on-pull-requests.yml  platform-linting-and-tests.yml  publish-platform-helm-chart.yml  release-please.yml
docs/: openapi.json
docs/pages/: mcp-authentication.md  platform-adding-llm-providers.md  platform-agents.md  platform-chat.md  (+14 more)
platform/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PER_AGENT_LLM_CONFIG_IMPLEMENTATION_PLAN.md  SYSTEM_API_KEYS_PLAN.md  biome.json  docker-banner.sh  package.json  pnpm-lock.yaml
platform/experiments/archestra-coding-agent/: .gitignore  Dockerfile  Makefile  README.md  catalog-entry.json  pyproject.toml  requirements.txt
platform/experiments/archestra-coding-agent/scripts/: docker-entrypoint.sh
platform/experiments/archestra-coding-agent/src/: __init__.py  entrypoint.py  register_tools.py
platform/experiments/archestra-coding-agent/src/config/: serena_config.yml
platform/experiments/archestra-coding-agent/src/config/prompt_templates/: system_prompt.yml
platform/experiments/archestra-coding-agent/src/tools/: __init__.py  git_tools.py  github_tools.py
platform/experiments/archestra-coding-agent/tests/: __init__.py  test_git_tools.py  test_github_tools.py
(+554 files in other folders)
