[project]
name = "archestra-coding-agent"
version = "0.0.1"
description = "Custom MCP server combining Serena with Git/GitHub operations for Archestra"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.1.0",
    "GitPython>=3.1.40",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

